--- a/awardsapp/templates/all-awards/base.html
+++ b/awardsapp/templates/all-awards/base.html
@@ -1,4 +1,3 @@
-{% load cloudinary%}
 {% load bootstrap4 %}
 {% load static%}
 <!DOCTYPE html>
@@ -7,14 +6,14 @@
   <meta charset="utf-8">
 
   {% if title %}
-  <title>Awwwards - {{title}}</title>
+  <title>Awards - {{title}}</title>
   {% else %}
-    <title> Awwwards  </title>
+    <title> Awards  </title>
   {% endif %}
 
   {% block styles %}
     {% bootstrap_css %}
-    <link rel="stylesheet" href="{% static 'css/index.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
