--- a/awardsapp/templates/django-registration/registration_form.html
+++ b/awardsapp/templates/django-registration/registration_form.html
@@ -1,37 +1,29 @@
-{%extends "registration/base.html"%} 
-{% load bootstrap4 %}
+{%extends "registration/base.html"%} {% load bootstrap4 %}
 {% block content %}
-<div style="padding-top: 110px;" class="container">
+<div class="container">
   <div class="row">
     <!-- Empty div -->
-    <div class="col-md-4 ">
-            <div class="lay">
-                
-            </div>
-            <img src="/static/mypics/instaQR.jpg" alt="dong">
-
-        </div>
-    <div class="col-md-4">
-        
-    </div>
+    <div class="col-md-4"></div>
     <div class="col-md-4">
       {% if form.errors %}
         <p> Some Information Might be Incorrect </p>
       {% endif %}
-      <div class="card">
+      <div class="panel panel-default">
 
-        <div class="card-heading">
-          <h3 class="text-center"><img width="200px" height="80px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Instagram_logo.svg/2000px-Instagram_logo.svg.png" alt=""></h3>
+        <div class="panel-heading">
+          <h3 class="text-center">Sign Up</h3>
         </div>
-        <div class="card-body">
+        <div class="panel-body">
 
-          <form  action="/accounts/register/"" method="post">
+          <form  action="/accounts/register/" method="post">
             {% csrf_token %}
             {% bootstrap_form form %}
             <div class="form-group">
-              <input type="submit" class="btn btn-primary btn-sm" value="Sign Up">
+              <input type="submit" class="btn btn-primary btn-md btn-block" value="Sign Up">
             </div>
-
+            <div class="section">
+                <p class="forgot">Already have an account? <a href="/accounts/login">Login</a></p>
+            </div>
             <input type="hidden" name="next" value="{{next}}">
 
           </form>
@@ -42,7 +34,7 @@
 
     </div>
     <!-- empty div -->
-    
+    <div class="col-md-4"></div>
   </div>
 </div>
 
