--- a/awardsapp/templates/registration/base.html
+++ b/awardsapp/templates/registration/base.html
@@ -2,34 +2,34 @@
 {% load static%}
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  {% if title %}
-  <title>Awards - {{title}}</title>
-  {% else %}
-    <title> Awards  </title>
-  {% endif %}
+
+  {%if title%}
+
+  <title>{{title}}</title>
+
+  {%endif%}
 
   {% block styles %}
     {% bootstrap_css %}
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Shalimar&display=swap" rel="stylesheet">
   {% endblock %}
-</head>
-<body>
-    {% include "navbar.html" %}
-    {% block content %} 
-    {%endblock%}
 
-    {% block scripts %}
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        
-     {% bootstrap_javascript %}
-     <script src="../static/js/main.js"></script>
-    {% endblock %}
+</head>
+
+<body>
+
+  {% block content %}  {%endblock%}
+
+
+  {% block scripts %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    {% bootstrap_javascript %}
+  {% endblock %}
+
 </body>
+
 </html>
