This commit adds a media folder

--- a/awardsapp/templates/profile.html
+++ b/awardsapp/templates/profile.html
@@ -1,4 +1,4 @@
-{%extends 'base.html'%} {% load bootstrap4 %}{{block.super}} {{form.media}}{% load staticfiles %} {% block content %}
+{%extends 'base.html'%} {% load bootstrap4 %}{{block.super}} {{form.media}}{% load static %} {% block content %}
 
 <div class="text-right" style="margin-top:45px;">
         <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">Add profile</button>
