This commit styles the navbar

--- a/awardsapp/templates/base.html
+++ b/awardsapp/templates/base.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="shortcut icon" href="https://steamusercontent-a.akamaihd.net/ugc/927049342945161213/3C58BDAFF40278A5E73435071D77F04D71240628/">
+    <link rel="shortcut icon" href="https://gfycat.com/adolescentfalsekakarikis">
     <meta name="viewport" content="width=device-width, initial-scale=1">
        {% block styles %}
         {% bootstrap_css %}
