--- a/awardsapp/templates/navbar.html
+++ b/awardsapp/templates/navbar.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <nav class="navbar navbar-expand-md navbar-light fixed-top " style="background-color:rgb(46, 1, 1)">
-        <a class="navbar-brand" href="/"><img src="https://steamusercontent-a.akamaihd.net/ugc/927049342945161213/3C58BDAFF40278A5E73435071D77F04D71240628/" height="70px" width="70px"></a>
+    <nav class="navbar navbar-expand-md navbar-light fixed-top " style="background-color:goldenrod">
+        <a class="navbar-brand" href="/"><img src="https://gfycat.com/adolescentfalsekakarikis" height="70px" width="70px"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -33,7 +33,7 @@
         
         <button class="btn btn-primary"><a href="/upload" style="text-decoration:none;color:beige">Submit project</a></button>
     {% else %}
-    <div class="btn btn-primary"><a href="/accounts/login" style="text-decoration:none; color:aliceblue">Login</a></div>
+    <div class="btn btn-primary"><a href="/accounts/login" style="text-decoration:none; color:goldenrod">Login</a></div>
     <div class="btn btn-primary"><a href="/signup" style="text-decoration:none; color:aliceblue">Register</a></div>
     {% endif %}
         
