--- a/awardsapp/templates/home.html
+++ b/awardsapp/templates/home.html
@@ -3,7 +3,7 @@
 <div class="div" style="padding:20px; background-image: url('https://data.whicdn.com/images/279900833/original.gif');background-size:cover ">
     <h5 style="color:red" class="text-center">AWARDS NOMINATION</h5>
          </div>
-<div class="div" style="padding-bottom: 500px; background-image: url('http://cleardarksky.com/csk/getcsk.php?id=AftnCyCCA');background-size: cover">
+<div class="div" style="padding-bottom: 500px; background-image: url('https://www.iemmys.tv/international-emmy-awards/awards-gala/?fbclid=IwAR1L7zqwOjim3_obRa62iiouOouGB9GdBGuv2zjou571GHDnTnQH0pInpQE');background-size: cover">
 
 
 
