This commit styles the layout

--- a/awardsapp/templates/review.html
+++ b/awardsapp/templates/review.html
@@ -9,20 +9,20 @@
                 <div class="row">
                         <div class="col-md-3">
                                 <h5>Usability</h5>
-                                <p>cool</p>
+                                <p>Rate</p>
                             </div>
                             <div style="background-color:black"></div>
                         <div class="col-md-3">
                                 <h5>Content</h5>
-                                <p>cool</p>
+                                <p>Rate</p>
                             </div>
                         <div class="col-md-3">
                                 <h5>Creativity</h5>
-                                <p>cool</p>
+                                <p>Rate</p>
                             </div>
                         <div class="col-md-3">
                             <h5>Design</h5>
-                            <p>cool</p>
+                            <p>Rate</p>
                         </div>
                     </div>
                     <div class="hovereffect">
