--- a/awardsapp/templates/pros.html
+++ b/awardsapp/templates/pros.html
@@ -24,7 +24,6 @@
   {% endif %}
         {% if user.is_authenticated %}
         
-   <!-- <div class="text-right">{{post|length}} projects</div>  -->
   
    <div class="text-right">
 
@@ -64,6 +63,6 @@
               {% endif %}     
 
 {% else %}
-  <a class='btn btn-default' href="/accounts/login">Login to legally access available projects</a>
+  <a class='btn btn-default' href="/accounts/login">Login to access available projects</a>
 {% endif %} 
 {% endblock %}
