--- a/awardsapp/templates/signup.html
+++ b/awardsapp/templates/signup.html
@@ -2,13 +2,13 @@
 <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="sttlesheet">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
   crossorigin="anonymous">
-<link rel="stylesheet" type="text/css" media="screen" href="main.css" /> {% endblock %} {% block content %}
+<link rel="stylesheet" type="text/css" media="screen" href="style.css" /> {% endblock %} {% block content %}
 
 <body>
 
   
    
-          <h1 class="text-center" style="color:rgb(99, 29, 29);">AwwardIT</h1>
+          <h1 class="text-center" style="color:goldenrod;">Awards</h1>
        
           <h2 class="text-center">Sign Up</h2>
         
