This commit styles the search button

--- a/awardsapp/templates/base.html
+++ b/awardsapp/templates/base.html
@@ -6,17 +6,22 @@
     <meta charset="utf-8" />
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="shortcut icon" href="https://gfycat.com/adolescentfalsekakarikis">
+    <link rel="shortcut icon" href="https://steamusercontent-a.akamaihd.net/ugc/927049342945161213/3C58BDAFF40278A5E73435071D77F04D71240628/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
        {% block styles %}
         {% bootstrap_css %}
-        <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+        <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     {% endblock %}
 </head>
 <body >  
     {% include "navbar.html" %}
     {% block content %}
     {% endblock %}
+    
+    
+    
+    
+    
     {% block scripts %}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         {% bootstrap_javascript %}
@@ -27,7 +32,7 @@
 <style>
 @media screen and (max-width: 1280px) {
   body {
-    background-color: rgb(74, 58, 143);
+    background-color: rgb(3, 12, 65);
   }
 }
 </style>
