--- a/awardsapp/templates/home.html
+++ b/awardsapp/templates/home.html
@@ -1,9 +1,12 @@
-{%extends 'base.html'%} {% load bootstrap4 %}{{block.super}} {{form.media}} 
+{%extends 'base.html'%}
+{% load bootstrap4 %}
+{{block.super}} 
+{{form.media}} 
 {% block content %}
+
 <div class="div" style="padding:20px; background-image: url('https://data.whicdn.com/images/279900833/original.gif');background-size:cover ">
-    <h5 style="color:red" class="text-center">AWARDS NOMINATION</h5>
-         </div>
-<div class="div" style="padding-bottom: 500px; background-image: url('https://www.iemmys.tv/international-emmy-awards/awards-gala/?fbclid=IwAR1L7zqwOjim3_obRa62iiouOouGB9GdBGuv2zjou571GHDnTnQH0pInpQE');background-size: cover">
+    <h5 style="color:rgb(255, 196, 0)" class="text-center">AWARDS HUBSPOT</h5>
+<div class="div" style="padding-bottom: 500px; background-image: url('https://www.istockphoto.com/video/blue-stage-awards-gm1090792768-292604036');background-size: cover">
 
 
 
