--- a/awardsapp/templates/review.html
+++ b/awardsapp/templates/review.html
@@ -1,4 +1,8 @@
-{%extends 'base.html'%} {% load bootstrap4 %}{{block.super}} {{form.media}}
+{%extends 'base.html'%} 
+{% load bootstrap4 %}
+{{block.super}} 
+{{form.media}}
+
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 {% block content %}
 <div class="container">
