--- a/awardsapp/templates/profile.html
+++ b/awardsapp/templates/profile.html
@@ -1,4 +1,9 @@
-{%extends 'base.html'%} {% load bootstrap4 %}{{block.super}} {{form.media}}{% load static %} {% block content %}
+{%extends 'base.html'%}
+{% load bootstrap4 %}
+{{block.super}} 
+{{form.media}}
+{% load static %}
+{% block content %}
 
 <div class="text-right" style="margin-top:45px;">
         <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">Add profile</button>
@@ -35,12 +40,7 @@
                     {{user.email}}
                 </div>
 </div>
-                    <div class="text-center">
-                        
-                        <img src="https://mbtskoudsalg.com/images/user-avatar-png-1.png" alt="Avatar" class="img-responsive" style="border-radius:70%; height:170px;"> 
-                        
-                        
-                    </div>
+                   
                     </div>
            
          
