--- a/awardsapp/templates/registration/upload.html
+++ b/awardsapp/templates/registration/upload.html
@@ -1,4 +1,7 @@
-{%extends 'base.html'%} {% load bootstrap4 %}{{block.super}}  {{form.media}}
+{%extends 'base.html'%}
+{% load bootstrap4 %}
+{{block.super}}  
+{{form.media}}
 {% block content %}
 
 <div class="container">
