--- a/awardsapp/templates/navbar.html
+++ b/awardsapp/templates/navbar.html
@@ -18,20 +18,20 @@
               <input type="search" placeholder="Search" name="name">
             </form>
         </div>
-        <a href="/profile" style="text-decoration: none; color:aliceblue">
+        <a href="/profile/" style="text-decoration: none; color:aliceblue">
         <div class="text-center">
                 {% if user.is_authenticated %}
                 {% if user.profile.pro_photo %}
               <section style="margin-right:20px;"><img src="{{user.profile.pro_photo.url}}" alt="Avatar" class="img-responsive" style="border-radius:100%; height:40px; width: 40px;">{{user.username}}</section>  
                 {% else  %}
-           <section style="margin-right:20px;"><img src="https://mbtskoudsalg.com/images/user-avatar-png-1.png" height="50" width="50" alt="avatar" class="rounded-circle img-responsive">{{user.username}}</section>
+           <section style="margin-right:20px;"><img src="https://www.flaticon.com/fhttps://www.flaticon.com/free-icon/trophy_147210ree-icon/trophy_147210" height="50" width="50" alt="avatar" class="rounded-circle img-responsive">{{user.username}}</section>
             {% endif %} 
         </div>
         </a>
         
         
         
-        <button class="btn btn-primary"><a href="/upload" style="text-decoration:none;color:beige">Submit project</a></button>
+        <button class="btn btn-primary"><a href="/upload/" style="text-decoration:none;color:beige">Submit project</a></button>
     {% else %}
     <div class="btn btn-primary"><a href="/accounts/login" style="text-decoration:none; color:goldenrod">Login</a></div>
     <div class="btn btn-primary"><a href="/signup" style="text-decoration:none; color:aliceblue">Register</a></div>
