--- a/awardsapp/templates/profile.html
+++ b/awardsapp/templates/profile.html
@@ -23,7 +23,7 @@
 
 <div class="text-left">
     
-    <a href="/logout" class="btn btn-danger" style="text-decoration:none;">Logout</a>
+    <a href="/logout/" class="btn btn-danger" style="text-decoration:none;">Logout</a>
 </div>
  
 <div class="container">
