--- a/awardsapp/templates/signup.html
+++ b/awardsapp/templates/signup.html
@@ -1,5 +1,5 @@
 {% load bootstrap4 %} {% block styles %} {% bootstrap_css %}
-<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="sttlesheet">
+<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
   crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" media="screen" href="style.css" /> {% endblock %} {% block content %}
@@ -26,7 +26,7 @@
             {% endfor %}
             <button class="btn btn-primary" type="submit">Sign up</button>
             
-              <p class="forgot">Already have an account? <a href="/accounts/login">Login</a></p>
+              <p class="forgot">Already have an account? <a href="/accounts/login/">Login</a></p>
             
           </form>
   
