This commit modifies the search functionality

--- a/awardsapp/templates/navbar.html
+++ b/awardsapp/templates/navbar.html
@@ -16,7 +16,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
   
           <form id="demo-2" action="{% url 'search_results'%}" class="form-inline my-2 my-sm-0">
-              <input type="search" placeholder="Search" name="name">
+              <input type="search_results" placeholder="Search" name="name">
             </form>
         </div>
         <a href="/profile/" style="text-decoration: none; color:aliceblue">
